Landing Page - Photo added
Camel foto added, cause camel toes are the best hoes.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,5 +24,6 @@
   <label for="usr">Name:</label>
   <input type="text" class="form-control" id="usr">
 </div>
-
-
+<div> 
+<img src="https://cdn.britannica.com/s:500x350/57/7057-004-0FFC795F.jpg"> 
+</div>
